@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD emacs-vcs-23.2.9999-r1.ebuild 10498 RMD160 7a08f5ae9ff200640d92bd9f5253af20261063ad SHA1 d5c68d730c2ab0257a36f01300522d8830bb2f1c SHA256 753ac41e0d90db819367e527abd325b472f0155b3b505f62d9cec33c8dbe6bc6
-EBUILD emacs-vcs-24.0.9999-r1.ebuild 10673 RMD160 9ffaaf325272d85ebcb8b5e865ac0c6ff821566a SHA1 69095caafbf102eb8fdd98af60ba2c8ed104ad76 SHA256 ea368c5fb3a466227c94749111fd7f87d0729cefd27a969296fbea4139b9a803
-MISC ChangeLog 2227 RMD160 68306e23ebfff6ce43b8a452b98fe4c7b6071599 SHA1 e81342f509ecc9fdba98438cabee29c250a910a7 SHA256 4185d279aef3191c11827b234a037f0a4977c213c4ac01ad53b0e87c61b5efb3
-MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
+EBUILD emacs-vcs-23.3.9999.ebuild 10468 RMD160 bc5901c6a21507368badcfb19cca6445d0af35c9 SHA1 65931920d33b6aeac8043af57cbbfa834555be63 SHA256 ce3467d581c48e622fce5adefd08565b8c872c183f7dd329e4ca10538160dc5b
+EBUILD emacs-vcs-24.0.9999-r1.ebuild 10643 RMD160 672d13b1bcb7aa965250d4230738eeca17586b89 SHA1 a8aff3862683dd0fd1c953ac937ee03a8c1d7443 SHA256 ba2af2a64484a89927c166bb68827ad664cb5cd84f306924722a9dd20873e0f9
+MISC ChangeLog 2529 RMD160 5196b84fc4e0ac1aed4ac177cb3f6be94eba7935 SHA1 c61177a3a645d40e9780d8cbe6ee219665b58101 SHA256 76256368bc5f48cbda803bfdb5bbb726d33a6ddcb56010888f9b3b244a58bf32
+MISC metadata.xml 1801 RMD160 606c780a3e86f485699157f14a35ca0e5da1d3c2 SHA1 05839ee25c6f6389e8eb80d783df895d59600a90 SHA256 bdc233a1795f52900dbe4d0a39c0e56d4eb5ba1c4842b9c46bae47f7052d5d74
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1f/PsACgkQOeoy/oIi7uyHywCeOr/KhdgbMqlwzTYDPlXEV0Ws
-VZ4AoKZ2KSvCUWylF1LaZsWG9EUKIUji
-=mpfc
+iEYEARECAAYFAk1so2wACgkQOeoy/oIi7uycOACgk+EaGPfStG5NanBnw7+TZ7AI
+wfUAoOKPanYSbJ0+kaUqcXB3EoM2sy+T
+=gMA8
 -----END PGP SIGNATURE-----
