@@ -28,7 +28,6 @@
     processing</flag>
   <flag name='libxml2'>Use <pkg>dev-libs/libxml2</pkg> to parse XML instead
     of the internal Lisp implementations</flag>
-  <flag name='sound'>Enable sound</flag>
   <flag name='toolkit-scroll-bars'>Use the selected toolkit's scrollbars in
     preference to Emacs' own scrollbars</flag>
 </use>
